# wechat-decrypt

./: .gitignore  LICENSE  NOTES.md  README.md  README_EN.md  README_ZH.md  SKILL.md  config.py  contacts.py  crypto.py  db.py  message.py  pyproject.toml  server.py  setup.ps1  setup.sh
docs/: 2026-06-05-windows-keyextract-findings.md  2026-06-05-windows-port-design.md  2026-06-05-windows-port-plan.md  2026-06-06-windows-raw-key-journey.md
e2e/: README.md
scripts/common/: export_chat.py  export_media.py  query.py  read_doc.py  repair_factory.py  salvage_btree.py  salvage_export.py  sqlcipher_decrypt.py  transcribe_db.py  verify_key.py  voice_decode.py
scripts/legacy/: transcribe.swift  transcribe_voice.sh
scripts/macos/: extract_key.sh  hook_pbkdf.js
scripts/windows/: decrypt_all.py  decrypt_read.py  extract_key.ps1  extract_key_frida.ps1  extract_raw_key.py  find_key.ps1  find_rawkey_follow.py  find_rawkey_v2.py  find_rawkey_via_salt.py  frida_aob.py  frida_attach_main.py  frida_attach_race.py  frida_brute_k1.py  frida_brute_rpc.py  frida_diag_read.py  frida_disasm.py  frida_entry_listen.py  frida_entry_verify.py  frida_entry_verify_race.py  frida_enum_dll.py  frida_enum_modules.py  frida_find_sha512.py  frida_find_via_kdfiter.py  frida_follow_ptr.py  frida_hook_alloc.py  frida_hook_bcrypt.py  frida_hook_entry_race.py  frida_hook_pbkdf2.py  frida_hook_sha512.py  frida_hook_sha512_v2.py  frida_hook_test.py  frida_memwatch.py  frida_probe.py  (+9 more)
test/: README.md  test_e2e.py
tests/: conftest.py  test_config.py  test_db_backend.py  test_transcribe_backend.py
